// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders components/card/demo/basic.tsx correctly 1`] = `
<div
  class="g-space g-space-vertical css-var-test-id"
  style="column-gap:16px;row-gap:16px"
>
  <div
    class="g-space-item"
  >
    <div
      class="g-card g-card-bordered css-var-test-id"
      style="width:300px"
    >
      <div
        class="g-card-head"
      >
        <div
          class="g-card-head-wrapper"
        >
          <div
            class="g-card-head-title"
          >
            Default size card
          </div>
          <div
            class="g-card-extra"
          >
            <a
              href="#"
            >
              More
            </a>
          </div>
        </div>
      </div>
      <div
        class="g-card-body"
      >
        <p>
          Card content
        </p>
        <p>
          Card content
        </p>
        <p>
          Card content
        </p>
      </div>
    </div>
  </div>
  <div
    class="g-space-item"
  >
    <div
      class="g-card g-card-bordered g-card-small css-var-test-id"
      style="width:300px"
    >
      <div
        class="g-card-head"
      >
        <div
          class="g-card-head-wrapper"
        >
          <div
            class="g-card-head-title"
          >
            Small size card
          </div>
          <div
            class="g-card-extra"
          >
            <a
              href="#"
            >
              More
            </a>
          </div>
        </div>
      </div>
      <div
        class="g-card-body"
      >
        <p>
          Card content
        </p>
        <p>
          Card content
        </p>
        <p>
          Card content
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/card/demo/border-less.tsx correctly 1`] = `
<div
  class="g-card css-var-test-id"
  style="width:300px"
>
  <div
    class="g-card-head"
  >
    <div
      class="g-card-head-wrapper"
    >
      <div
        class="g-card-head-title"
      >
        Card title
      </div>
    </div>
  </div>
  <div
    class="g-card-body"
  >
    <p>
      Card content
    </p>
    <p>
      Card content
    </p>
    <p>
      Card content
    </p>
  </div>
</div>
`;

exports[`renders components/card/demo/component-token.tsx correctly 1`] = `
Array [
  <div
    class="g-card g-card-bordered g-card-contain-tabs css-var-test-id"
  >
    <div
      class="g-card-head"
    >
      <div
        class="g-card-head-wrapper"
      >
        <div
          class="g-card-head-title"
        >
          Card title
        </div>
        <div
          class="g-card-extra"
        >
          More
        </div>
      </div>
      <div
        class="g-tabs g-tabs-top g-tabs-large g-card-head-tabs css-var-test-id g-tabs-css-var"
      >
        <div
          aria-orientation="horizontal"
          class="g-tabs-nav"
          role="tablist"
        >
          <div
            class="g-tabs-nav-wrap"
          >
            <div
              class="g-tabs-nav-list"
              style="transform:translate(0px, 0px)"
            >
              <div
                class="g-tabs-tab g-tabs-tab-active"
                data-node-key="tab1"
              >
                <div
                  aria-selected="true"
                  class="g-tabs-tab-btn"
                  role="tab"
                  tabindex="0"
                >
                  tab1
                </div>
              </div>
              <div
                class="g-tabs-tab"
                data-node-key="tab2"
              >
                <div
                  aria-selected="false"
                  class="g-tabs-tab-btn"
                  role="tab"
                  tabindex="-1"
                >
                  tab2
                </div>
              </div>
              <div
                class="g-tabs-ink-bar g-tabs-ink-bar-animated"
              />
            </div>
          </div>
          <div
            class="g-tabs-nav-operations g-tabs-nav-operations-hidden"
          >
            <button
              aria-controls="null-more-popup"
              aria-expanded="false"
              aria-haspopup="listbox"
              class="g-tabs-nav-more"
              id="null-more"
              style="visibility:hidden;order:1"
              type="button"
            >
              <span
                aria-label="ellipsis"
                class="gicon gicon-ellipsis"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="ellipsis"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <div
          class="g-tabs-content-holder"
        >
          <div
            class="g-tabs-content g-tabs-content-top"
          >
            <div
              aria-hidden="false"
              class="g-tabs-tabpane g-tabs-tabpane-active"
              role="tabpanel"
              tabindex="-1"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="g-card-body"
    >
      <p>
        Card content
      </p>
      <p>
        Card content
      </p>
      <p>
        Card content
      </p>
    </div>
    <ul
      class="g-card-actions"
    >
      <li
        style="width:33.333333333333336%"
      >
        <span>
          <span
            aria-label="setting"
            class="gicon gicon-setting"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="setting"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M924.8 625.7l-65.5-56c3.1-19 4.7-38.4 4.7-57.8s-1.6-38.8-4.7-57.8l65.5-56a32.03 32.03 0 009.3-35.2l-.9-2.6a443.74 443.74 0 00-79.7-137.9l-1.8-2.1a32.12 32.12 0 00-35.1-9.5l-81.3 28.9c-30-24.6-63.5-44-99.7-57.6l-15.7-85a32.05 32.05 0 00-25.8-25.7l-2.7-.5c-52.1-9.4-106.9-9.4-159 0l-2.7.5a32.05 32.05 0 00-25.8 25.7l-15.8 85.4a351.86 351.86 0 00-99 57.4l-81.9-29.1a32 32 0 00-35.1 9.5l-1.8 2.1a446.02 446.02 0 00-79.7 137.9l-.9 2.6c-4.5 12.5-.8 26.5 9.3 35.2l66.3 56.6c-3.1 18.8-4.6 38-4.6 57.1 0 19.2 1.5 38.4 4.6 57.1L99 625.5a32.03 32.03 0 00-9.3 35.2l.9 2.6c18.1 50.4 44.9 96.9 79.7 137.9l1.8 2.1a32.12 32.12 0 0035.1 9.5l81.9-29.1c29.8 24.5 63.1 43.9 99 57.4l15.8 85.4a32.05 32.05 0 0025.8 25.7l2.7.5a449.4 449.4 0 00159 0l2.7-.5a32.05 32.05 0 0025.8-25.7l15.7-85a350 350 0 0099.7-57.6l81.3 28.9a32 32 0 0035.1-9.5l1.8-2.1c34.8-41.1 61.6-87.5 79.7-137.9l.9-2.6c4.5-12.3.8-26.3-9.3-35zM788.3 465.9c2.5 15.1 3.8 30.6 3.8 46.1s-1.3 31-3.8 46.1l-6.6 40.1 74.7 63.9a370.03 370.03 0 01-42.6 73.6L721 702.8l-31.4 25.8c-23.9 19.6-50.5 35-79.3 45.8l-38.1 14.3-17.9 97a377.5 377.5 0 01-85 0l-17.9-97.2-37.8-14.5c-28.5-10.8-55-26.2-78.7-45.7l-31.4-25.9-93.4 33.2c-17-22.9-31.2-47.6-42.6-73.6l75.5-64.5-6.5-40c-2.4-14.9-3.7-30.3-3.7-45.5 0-15.3 1.2-30.6 3.7-45.5l6.5-40-75.5-64.5c11.3-26.1 25.6-50.7 42.6-73.6l93.4 33.2 31.4-25.9c23.7-19.5 50.2-34.9 78.7-45.7l37.9-14.3 17.9-97.2c28.1-3.2 56.8-3.2 85 0l17.9 97 38.1 14.3c28.7 10.8 55.4 26.2 79.3 45.8l31.4 25.8 92.8-32.9c17 22.9 31.2 47.6 42.6 73.6L781.8 426l6.5 39.9zM512 326c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm79.2 255.2A111.6 111.6 0 01512 614c-29.9 0-58-11.7-79.2-32.8A111.6 111.6 0 01400 502c0-29.9 11.7-58 32.8-79.2C454 401.6 482.1 390 512 390c29.9 0 58 11.6 79.2 32.8A111.6 111.6 0 01624 502c0 29.9-11.7 58-32.8 79.2z"
              />
            </svg>
          </span>
        </span>
      </li>
      <li
        style="width:33.333333333333336%"
      >
        <span>
          <span
            aria-label="edit"
            class="gicon gicon-edit"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="edit"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
              />
            </svg>
          </span>
        </span>
      </li>
      <li
        style="width:33.333333333333336%"
      >
        <span>
          <span
            aria-label="ellipsis"
            class="gicon gicon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </span>
      </li>
    </ul>
  </div>,
  <div
    class="g-card g-card-bordered g-card-small css-var-test-id"
    style="width:300px"
  >
    <div
      class="g-card-head"
    >
      <div
        class="g-card-head-wrapper"
      >
        <div
          class="g-card-head-title"
        >
          Small size card
        </div>
        <div
          class="g-card-extra"
        >
          <a
            href="#"
          >
            More
          </a>
        </div>
      </div>
    </div>
    <div
      class="g-card-body"
    >
      <p>
        Card content
      </p>
      <p>
        Card content
      </p>
      <p>
        Card content
      </p>
    </div>
  </div>,
]
`;

exports[`renders components/card/demo/flexible-content.tsx correctly 1`] = `
<div
  class="g-card g-card-bordered g-card-hoverable css-var-test-id"
  style="width:240px"
>
  <div
    class="g-card-cover"
  >
    <img
      alt="example"
      draggable="false"
      src="https://os.alipayobjects.com/rmsportal/QBnOOoLaAfKPirc.png"
    />
  </div>
  <div
    class="g-card-body"
  >
    <div
      class="g-card-meta"
    >
      <div
        class="g-card-meta-section"
      >
        <div
          class="g-card-meta-title"
        >
          Europe Street beat
        </div>
        <div
          class="g-card-meta-description"
        >
          www.instagram.com
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/card/demo/grid-card.tsx correctly 1`] = `
<div
  class="g-card g-card-bordered g-card-contain-grid css-var-test-id"
>
  <div
    class="g-card-head"
  >
    <div
      class="g-card-head-wrapper"
    >
      <div
        class="g-card-head-title"
      >
        Card Title
      </div>
    </div>
  </div>
  <div
    class="g-card-body"
  >
    <div
      class="g-card-grid g-card-grid-hoverable"
      style="width:25%;text-align:center"
    >
      Content
    </div>
    <div
      class="g-card-grid"
      style="width:25%;text-align:center"
    >
      Content
    </div>
    <div
      class="g-card-grid g-card-grid-hoverable"
      style="width:25%;text-align:center"
    >
      Content
    </div>
    <div
      class="g-card-grid g-card-grid-hoverable"
      style="width:25%;text-align:center"
    >
      Content
    </div>
    <div
      class="g-card-grid g-card-grid-hoverable"
      style="width:25%;text-align:center"
    >
      Content
    </div>
    <div
      class="g-card-grid g-card-grid-hoverable"
      style="width:25%;text-align:center"
    >
      Content
    </div>
    <div
      class="g-card-grid g-card-grid-hoverable"
      style="width:25%;text-align:center"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`renders components/card/demo/in-column.tsx correctly 1`] = `
<div
  class="g-row css-var-test-id"
  style="margin-inline:-8px"
>
  <div
    class="g-col g-col-8 css-var-test-id"
    style="padding-inline:8px"
  >
    <div
      class="g-card css-var-test-id"
    >
      <div
        class="g-card-head"
      >
        <div
          class="g-card-head-wrapper"
        >
          <div
            class="g-card-head-title"
          >
            Card title
          </div>
        </div>
      </div>
      <div
        class="g-card-body"
      >
        Card content
      </div>
    </div>
  </div>
  <div
    class="g-col g-col-8 css-var-test-id"
    style="padding-inline:8px"
  >
    <div
      class="g-card css-var-test-id"
    >
      <div
        class="g-card-head"
      >
        <div
          class="g-card-head-wrapper"
        >
          <div
            class="g-card-head-title"
          >
            Card title
          </div>
        </div>
      </div>
      <div
        class="g-card-body"
      >
        Card content
      </div>
    </div>
  </div>
  <div
    class="g-col g-col-8 css-var-test-id"
    style="padding-inline:8px"
  >
    <div
      class="g-card css-var-test-id"
    >
      <div
        class="g-card-head"
      >
        <div
          class="g-card-head-wrapper"
        >
          <div
            class="g-card-head-title"
          >
            Card title
          </div>
        </div>
      </div>
      <div
        class="g-card-body"
      >
        Card content
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/card/demo/inner.tsx correctly 1`] = `
<div
  class="g-card g-card-bordered css-var-test-id"
>
  <div
    class="g-card-head"
  >
    <div
      class="g-card-head-wrapper"
    >
      <div
        class="g-card-head-title"
      >
        Card title
      </div>
    </div>
  </div>
  <div
    class="g-card-body"
  >
    <div
      class="g-card g-card-bordered g-card-type-inner css-var-test-id"
    >
      <div
        class="g-card-head"
      >
        <div
          class="g-card-head-wrapper"
        >
          <div
            class="g-card-head-title"
          >
            Inner Card title
          </div>
          <div
            class="g-card-extra"
          >
            <a
              href="#"
            >
              More
            </a>
          </div>
        </div>
      </div>
      <div
        class="g-card-body"
      >
        Inner Card content
      </div>
    </div>
    <div
      class="g-card g-card-bordered g-card-type-inner css-var-test-id"
      style="margin-top:16px"
    >
      <div
        class="g-card-head"
      >
        <div
          class="g-card-head-wrapper"
        >
          <div
            class="g-card-head-title"
          >
            Inner Card title
          </div>
          <div
            class="g-card-extra"
          >
            <a
              href="#"
            >
              More
            </a>
          </div>
        </div>
      </div>
      <div
        class="g-card-body"
      >
        Inner Card content
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/card/demo/loading.tsx correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-align-start g-flex-gap-medium g-flex-vertical"
>
  <button
    aria-checked="false"
    class="g-switch css-var-test-id"
    role="switch"
    type="button"
  >
    <div
      class="g-switch-handle"
    />
    <span
      class="g-switch-inner"
    >
      <span
        class="g-switch-inner-checked"
      />
      <span
        class="g-switch-inner-unchecked"
      />
    </span>
  </button>
  <div
    class="g-card g-card-loading g-card-bordered css-var-test-id"
    style="min-width:300px"
  >
    <div
      class="g-card-body"
    >
      <div
        class="g-skeleton g-skeleton-active css-var-test-id"
      >
        <div
          class="g-skeleton-section"
        >
          <ul
            class="g-skeleton-paragraph"
          >
            <li />
            <li />
            <li />
            <li
              style="width:61%"
            />
          </ul>
        </div>
      </div>
    </div>
    <ul
      class="g-card-actions"
    >
      <li
        style="width:33.333333333333336%"
      >
        <span>
          <span
            aria-label="edit"
            class="gicon gicon-edit"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="edit"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
              />
            </svg>
          </span>
        </span>
      </li>
      <li
        style="width:33.333333333333336%"
      >
        <span>
          <span
            aria-label="setting"
            class="gicon gicon-setting"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="setting"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M924.8 625.7l-65.5-56c3.1-19 4.7-38.4 4.7-57.8s-1.6-38.8-4.7-57.8l65.5-56a32.03 32.03 0 009.3-35.2l-.9-2.6a443.74 443.74 0 00-79.7-137.9l-1.8-2.1a32.12 32.12 0 00-35.1-9.5l-81.3 28.9c-30-24.6-63.5-44-99.7-57.6l-15.7-85a32.05 32.05 0 00-25.8-25.7l-2.7-.5c-52.1-9.4-106.9-9.4-159 0l-2.7.5a32.05 32.05 0 00-25.8 25.7l-15.8 85.4a351.86 351.86 0 00-99 57.4l-81.9-29.1a32 32 0 00-35.1 9.5l-1.8 2.1a446.02 446.02 0 00-79.7 137.9l-.9 2.6c-4.5 12.5-.8 26.5 9.3 35.2l66.3 56.6c-3.1 18.8-4.6 38-4.6 57.1 0 19.2 1.5 38.4 4.6 57.1L99 625.5a32.03 32.03 0 00-9.3 35.2l.9 2.6c18.1 50.4 44.9 96.9 79.7 137.9l1.8 2.1a32.12 32.12 0 0035.1 9.5l81.9-29.1c29.8 24.5 63.1 43.9 99 57.4l15.8 85.4a32.05 32.05 0 0025.8 25.7l2.7.5a449.4 449.4 0 00159 0l2.7-.5a32.05 32.05 0 0025.8-25.7l15.7-85a350 350 0 0099.7-57.6l81.3 28.9a32 32 0 0035.1-9.5l1.8-2.1c34.8-41.1 61.6-87.5 79.7-137.9l.9-2.6c4.5-12.3.8-26.3-9.3-35zM788.3 465.9c2.5 15.1 3.8 30.6 3.8 46.1s-1.3 31-3.8 46.1l-6.6 40.1 74.7 63.9a370.03 370.03 0 01-42.6 73.6L721 702.8l-31.4 25.8c-23.9 19.6-50.5 35-79.3 45.8l-38.1 14.3-17.9 97a377.5 377.5 0 01-85 0l-17.9-97.2-37.8-14.5c-28.5-10.8-55-26.2-78.7-45.7l-31.4-25.9-93.4 33.2c-17-22.9-31.2-47.6-42.6-73.6l75.5-64.5-6.5-40c-2.4-14.9-3.7-30.3-3.7-45.5 0-15.3 1.2-30.6 3.7-45.5l6.5-40-75.5-64.5c11.3-26.1 25.6-50.7 42.6-73.6l93.4 33.2 31.4-25.9c23.7-19.5 50.2-34.9 78.7-45.7l37.9-14.3 17.9-97.2c28.1-3.2 56.8-3.2 85 0l17.9 97 38.1 14.3c28.7 10.8 55.4 26.2 79.3 45.8l31.4 25.8 92.8-32.9c17 22.9 31.2 47.6 42.6 73.6L781.8 426l6.5 39.9zM512 326c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm79.2 255.2A111.6 111.6 0 01512 614c-29.9 0-58-11.7-79.2-32.8A111.6 111.6 0 01400 502c0-29.9 11.7-58 32.8-79.2C454 401.6 482.1 390 512 390c29.9 0 58 11.6 79.2 32.8A111.6 111.6 0 01624 502c0 29.9-11.7 58-32.8 79.2z"
              />
            </svg>
          </span>
        </span>
      </li>
      <li
        style="width:33.333333333333336%"
      >
        <span>
          <span
            aria-label="ellipsis"
            class="gicon gicon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </span>
      </li>
    </ul>
  </div>
  <div
    class="g-card g-card-loading g-card-bordered css-var-test-id"
    style="min-width:300px"
  >
    <div
      class="g-card-body"
    >
      <div
        class="g-skeleton g-skeleton-active css-var-test-id"
      >
        <div
          class="g-skeleton-section"
        >
          <ul
            class="g-skeleton-paragraph"
          >
            <li />
            <li />
            <li />
            <li
              style="width:61%"
            />
          </ul>
        </div>
      </div>
    </div>
    <ul
      class="g-card-actions"
    >
      <li
        style="width:33.333333333333336%"
      >
        <span>
          <span
            aria-label="edit"
            class="gicon gicon-edit"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="edit"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
              />
            </svg>
          </span>
        </span>
      </li>
      <li
        style="width:33.333333333333336%"
      >
        <span>
          <span
            aria-label="setting"
            class="gicon gicon-setting"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="setting"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M924.8 625.7l-65.5-56c3.1-19 4.7-38.4 4.7-57.8s-1.6-38.8-4.7-57.8l65.5-56a32.03 32.03 0 009.3-35.2l-.9-2.6a443.74 443.74 0 00-79.7-137.9l-1.8-2.1a32.12 32.12 0 00-35.1-9.5l-81.3 28.9c-30-24.6-63.5-44-99.7-57.6l-15.7-85a32.05 32.05 0 00-25.8-25.7l-2.7-.5c-52.1-9.4-106.9-9.4-159 0l-2.7.5a32.05 32.05 0 00-25.8 25.7l-15.8 85.4a351.86 351.86 0 00-99 57.4l-81.9-29.1a32 32 0 00-35.1 9.5l-1.8 2.1a446.02 446.02 0 00-79.7 137.9l-.9 2.6c-4.5 12.5-.8 26.5 9.3 35.2l66.3 56.6c-3.1 18.8-4.6 38-4.6 57.1 0 19.2 1.5 38.4 4.6 57.1L99 625.5a32.03 32.03 0 00-9.3 35.2l.9 2.6c18.1 50.4 44.9 96.9 79.7 137.9l1.8 2.1a32.12 32.12 0 0035.1 9.5l81.9-29.1c29.8 24.5 63.1 43.9 99 57.4l15.8 85.4a32.05 32.05 0 0025.8 25.7l2.7.5a449.4 449.4 0 00159 0l2.7-.5a32.05 32.05 0 0025.8-25.7l15.7-85a350 350 0 0099.7-57.6l81.3 28.9a32 32 0 0035.1-9.5l1.8-2.1c34.8-41.1 61.6-87.5 79.7-137.9l.9-2.6c4.5-12.3.8-26.3-9.3-35zM788.3 465.9c2.5 15.1 3.8 30.6 3.8 46.1s-1.3 31-3.8 46.1l-6.6 40.1 74.7 63.9a370.03 370.03 0 01-42.6 73.6L721 702.8l-31.4 25.8c-23.9 19.6-50.5 35-79.3 45.8l-38.1 14.3-17.9 97a377.5 377.5 0 01-85 0l-17.9-97.2-37.8-14.5c-28.5-10.8-55-26.2-78.7-45.7l-31.4-25.9-93.4 33.2c-17-22.9-31.2-47.6-42.6-73.6l75.5-64.5-6.5-40c-2.4-14.9-3.7-30.3-3.7-45.5 0-15.3 1.2-30.6 3.7-45.5l6.5-40-75.5-64.5c11.3-26.1 25.6-50.7 42.6-73.6l93.4 33.2 31.4-25.9c23.7-19.5 50.2-34.9 78.7-45.7l37.9-14.3 17.9-97.2c28.1-3.2 56.8-3.2 85 0l17.9 97 38.1 14.3c28.7 10.8 55.4 26.2 79.3 45.8l31.4 25.8 92.8-32.9c17 22.9 31.2 47.6 42.6 73.6L781.8 426l6.5 39.9zM512 326c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm79.2 255.2A111.6 111.6 0 01512 614c-29.9 0-58-11.7-79.2-32.8A111.6 111.6 0 01400 502c0-29.9 11.7-58 32.8-79.2C454 401.6 482.1 390 512 390c29.9 0 58 11.6 79.2 32.8A111.6 111.6 0 01624 502c0 29.9-11.7 58-32.8 79.2z"
              />
            </svg>
          </span>
        </span>
      </li>
      <li
        style="width:33.333333333333336%"
      >
        <span>
          <span
            aria-label="ellipsis"
            class="gicon gicon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`renders components/card/demo/meta.tsx correctly 1`] = `
<div
  class="g-card g-card-bordered css-var-test-id"
  style="width:300px"
>
  <div
    class="g-card-cover"
  >
    <img
      alt="example"
      draggable="false"
      src="https://gw.alipayobjects.com/zos/rmsportal/JiqGstEfoWAOHiTxclqi.png"
    />
  </div>
  <div
    class="g-card-body"
  >
    <div
      class="g-card-meta"
    >
      <div
        class="g-card-meta-avatar"
      >
        <span
          class="g-avatar g-avatar-circle g-avatar-image css-var-test-id g-avatar-css-var"
        >
          <img
            src="https://api.dicebear.com/7.x/miniavs/svg?seed=8"
          />
        </span>
      </div>
      <div
        class="g-card-meta-section"
      >
        <div
          class="g-card-meta-title"
        >
          Card title
        </div>
        <div
          class="g-card-meta-description"
        >
          This is the description
        </div>
      </div>
    </div>
  </div>
  <ul
    class="g-card-actions"
  >
    <li
      style="width:33.333333333333336%"
    >
      <span>
        <span
          aria-label="setting"
          class="gicon gicon-setting"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="setting"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M924.8 625.7l-65.5-56c3.1-19 4.7-38.4 4.7-57.8s-1.6-38.8-4.7-57.8l65.5-56a32.03 32.03 0 009.3-35.2l-.9-2.6a443.74 443.74 0 00-79.7-137.9l-1.8-2.1a32.12 32.12 0 00-35.1-9.5l-81.3 28.9c-30-24.6-63.5-44-99.7-57.6l-15.7-85a32.05 32.05 0 00-25.8-25.7l-2.7-.5c-52.1-9.4-106.9-9.4-159 0l-2.7.5a32.05 32.05 0 00-25.8 25.7l-15.8 85.4a351.86 351.86 0 00-99 57.4l-81.9-29.1a32 32 0 00-35.1 9.5l-1.8 2.1a446.02 446.02 0 00-79.7 137.9l-.9 2.6c-4.5 12.5-.8 26.5 9.3 35.2l66.3 56.6c-3.1 18.8-4.6 38-4.6 57.1 0 19.2 1.5 38.4 4.6 57.1L99 625.5a32.03 32.03 0 00-9.3 35.2l.9 2.6c18.1 50.4 44.9 96.9 79.7 137.9l1.8 2.1a32.12 32.12 0 0035.1 9.5l81.9-29.1c29.8 24.5 63.1 43.9 99 57.4l15.8 85.4a32.05 32.05 0 0025.8 25.7l2.7.5a449.4 449.4 0 00159 0l2.7-.5a32.05 32.05 0 0025.8-25.7l15.7-85a350 350 0 0099.7-57.6l81.3 28.9a32 32 0 0035.1-9.5l1.8-2.1c34.8-41.1 61.6-87.5 79.7-137.9l.9-2.6c4.5-12.3.8-26.3-9.3-35zM788.3 465.9c2.5 15.1 3.8 30.6 3.8 46.1s-1.3 31-3.8 46.1l-6.6 40.1 74.7 63.9a370.03 370.03 0 01-42.6 73.6L721 702.8l-31.4 25.8c-23.9 19.6-50.5 35-79.3 45.8l-38.1 14.3-17.9 97a377.5 377.5 0 01-85 0l-17.9-97.2-37.8-14.5c-28.5-10.8-55-26.2-78.7-45.7l-31.4-25.9-93.4 33.2c-17-22.9-31.2-47.6-42.6-73.6l75.5-64.5-6.5-40c-2.4-14.9-3.7-30.3-3.7-45.5 0-15.3 1.2-30.6 3.7-45.5l6.5-40-75.5-64.5c11.3-26.1 25.6-50.7 42.6-73.6l93.4 33.2 31.4-25.9c23.7-19.5 50.2-34.9 78.7-45.7l37.9-14.3 17.9-97.2c28.1-3.2 56.8-3.2 85 0l17.9 97 38.1 14.3c28.7 10.8 55.4 26.2 79.3 45.8l31.4 25.8 92.8-32.9c17 22.9 31.2 47.6 42.6 73.6L781.8 426l6.5 39.9zM512 326c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm79.2 255.2A111.6 111.6 0 01512 614c-29.9 0-58-11.7-79.2-32.8A111.6 111.6 0 01400 502c0-29.9 11.7-58 32.8-79.2C454 401.6 482.1 390 512 390c29.9 0 58 11.6 79.2 32.8A111.6 111.6 0 01624 502c0 29.9-11.7 58-32.8 79.2z"
            />
          </svg>
        </span>
      </span>
    </li>
    <li
      style="width:33.333333333333336%"
    >
      <span>
        <span
          aria-label="edit"
          class="gicon gicon-edit"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="edit"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
            />
          </svg>
        </span>
      </span>
    </li>
    <li
      style="width:33.333333333333336%"
    >
      <span>
        <span
          aria-label="ellipsis"
          class="gicon gicon-ellipsis"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="ellipsis"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
            />
          </svg>
        </span>
      </span>
    </li>
  </ul>
</div>
`;

exports[`renders components/card/demo/simple.tsx correctly 1`] = `
<div
  class="g-card g-card-bordered css-var-test-id"
  style="width:300px"
>
  <div
    class="g-card-body"
  >
    <p>
      Card content
    </p>
    <p>
      Card content
    </p>
    <p>
      Card content
    </p>
  </div>
</div>
`;

exports[`renders components/card/demo/style-class.tsx correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-gap-medium"
>
  <div
    class="g-card css-var-test-id acss-1ri7sgv"
    style="box-shadow:0 2px 8px rgba(0,0,0,0.06);border-radius:8px"
  >
    <div
      class="g-card-head acss-xxf1ab"
    >
      <div
        class="g-card-head-wrapper"
      >
        <div
          class="g-card-head-title"
          style="font-size:16px;font-weight:500"
        >
          Object Card
        </div>
        <div
          class="g-card-extra"
        >
          <button
            class="g-btn css-var-test-id g-btn-link g-btn-color-link g-btn-varig-link"
            type="button"
          >
            <span>
              More
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="g-card-body acss-1dacand"
    >
      <div
        class="g-card-meta"
      >
        <div
          class="g-card-meta-avatar"
        >
          <span
            class="g-avatar g-avatar-circle g-avatar-image css-var-test-id g-avatar-css-var"
          >
            <img
              src="https://api.dicebear.com/7.x/miniavs/svg?seed=1"
            />
          </span>
        </div>
        <div
          class="g-card-meta-section"
        >
          <div
            class="g-card-meta-title"
          >
            Object Card Meta title
          </div>
          <div
            class="g-card-meta-description"
          >
            This is the description
          </div>
        </div>
      </div>
    </div>
    <ul
      class="g-card-actions"
    >
      <li
        style="width:33.333333333333336%"
      >
        <span>
          <span
            aria-label="heart"
            class="gicon gicon-heart"
            role="img"
            style="color:#ff6b6b"
          >
            <svg
              aria-hidden="true"
              data-icon="heart"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M923 283.6a260.04 260.04 0 00-56.9-82.8 264.4 264.4 0 00-84-55.5A265.34 265.34 0 00679.7 125c-49.3 0-97.4 13.5-139.2 39-10 6.1-19.5 12.8-28.5 20.1-9-7.3-18.5-14-28.5-20.1-41.8-25.5-89.9-39-139.2-39-35.5 0-69.9 6.8-102.4 20.3-31.4 13-59.7 31.7-84 55.5a258.44 258.44 0 00-56.9 82.8c-13.9 32.3-21 66.6-21 101.9 0 33.3 6.8 68 20.3 103.3 11.3 29.5 27.5 60.1 48.2 91 32.8 48.9 77.9 99.9 133.9 151.6 92.8 85.7 184.7 144.9 188.6 147.3l23.7 15.2c10.5 6.7 24 6.7 34.5 0l23.7-15.2c3.9-2.5 95.7-61.6 188.6-147.3 56-51.7 101.1-102.7 133.9-151.6 20.7-30.9 37-61.5 48.2-91 13.5-35.3 20.3-70 20.3-103.3.1-35.3-7-69.6-20.9-101.9zM512 814.8S156 586.7 156 385.5C156 283.6 240.3 201 344.3 201c73.1 0 136.5 40.8 167.7 100.4C543.2 241.8 606.6 201 679.7 201c104 0 188.3 82.6 188.3 184.5 0 201.2-356 429.3-356 429.3z"
              />
            </svg>
          </span>
        </span>
      </li>
      <li
        style="width:33.333333333333336%"
      >
        <span>
          <span
            aria-label="share-alt"
            class="gicon gicon-share-alt"
            role="img"
            style="color:#4ecdc4"
          >
            <svg
              aria-hidden="true"
              data-icon="share-alt"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M752 664c-28.5 0-54.8 10-75.4 26.7L469.4 540.8a160.68 160.68 0 000-57.6l207.2-149.9C697.2 350 723.5 360 752 360c66.2 0 120-53.8 120-120s-53.8-120-120-120-120 53.8-120 120c0 11.6 1.6 22.7 4.7 33.3L439.9 415.8C410.7 377.1 364.3 352 312 352c-88.4 0-160 71.6-160 160s71.6 160 160 160c52.3 0 98.7-25.1 127.9-63.8l196.8 142.5c-3.1 10.6-4.7 21.8-4.7 33.3 0 66.2 53.8 120 120 120s120-53.8 120-120-53.8-120-120-120zm0-476c28.7 0 52 23.3 52 52s-23.3 52-52 52-52-23.3-52-52 23.3-52 52-52zM312 600c-48.5 0-88-39.5-88-88s39.5-88 88-88 88 39.5 88 88-39.5 88-88 88zm440 236c-28.7 0-52-23.3-52-52s23.3-52 52-52 52 23.3 52 52-23.3 52-52 52z"
              />
            </svg>
          </span>
        </span>
      </li>
      <li
        style="width:33.333333333333336%"
      >
        <span>
          <span
            aria-label="edit"
            class="gicon gicon-edit"
            role="img"
            style="color:#45b7d1"
          >
            <svg
              aria-hidden="true"
              data-icon="edit"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
              />
            </svg>
          </span>
        </span>
      </li>
    </ul>
  </div>
  <div
    class="g-card g-card-bordered css-var-test-id acss-1ri7sgv"
    style="border-color:#696FC7;box-shadow:0 2px 8px #A7AAE1;border-radius:8px"
  >
    <div
      class="g-card-head acss-xxf1ab"
    >
      <div
        class="g-card-head-wrapper"
      >
        <div
          class="g-card-head-title"
          style="font-size:16px;font-weight:500;color:#A7AAE1"
        >
          Function Card
        </div>
        <div
          class="g-card-extra"
          style="color:#696FC7"
        >
          <button
            class="g-btn css-var-test-id g-btn-link g-btn-color-link g-btn-varig-link"
            style="color:#A7AAE1"
            type="button"
          >
            <span>
              More
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="g-card-body acss-1dacand"
    >
      <div
        class="g-card-meta"
      >
        <div
          class="g-card-meta-avatar"
        >
          <span
            class="g-avatar g-avatar-circle g-avatar-image css-var-test-id g-avatar-css-var"
          >
            <img
              src="https://api.dicebear.com/7.x/miniavs/svg?seed=1"
            />
          </span>
        </div>
        <div
          class="g-card-meta-section"
        >
          <div
            class="g-card-meta-title"
            style="color:#A7AAE1"
          >
            Function Card Meta title
          </div>
          <div
            class="g-card-meta-description"
            style="color:#A7AAE1"
          >
            This is the description
          </div>
        </div>
      </div>
    </div>
    <ul
      class="g-card-actions"
    >
      <li
        style="width:33.333333333333336%"
      >
        <span>
          <span
            aria-label="heart"
            class="gicon gicon-heart"
            role="img"
            style="color:#ff6b6b"
          >
            <svg
              aria-hidden="true"
              data-icon="heart"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M923 283.6a260.04 260.04 0 00-56.9-82.8 264.4 264.4 0 00-84-55.5A265.34 265.34 0 00679.7 125c-49.3 0-97.4 13.5-139.2 39-10 6.1-19.5 12.8-28.5 20.1-9-7.3-18.5-14-28.5-20.1-41.8-25.5-89.9-39-139.2-39-35.5 0-69.9 6.8-102.4 20.3-31.4 13-59.7 31.7-84 55.5a258.44 258.44 0 00-56.9 82.8c-13.9 32.3-21 66.6-21 101.9 0 33.3 6.8 68 20.3 103.3 11.3 29.5 27.5 60.1 48.2 91 32.8 48.9 77.9 99.9 133.9 151.6 92.8 85.7 184.7 144.9 188.6 147.3l23.7 15.2c10.5 6.7 24 6.7 34.5 0l23.7-15.2c3.9-2.5 95.7-61.6 188.6-147.3 56-51.7 101.1-102.7 133.9-151.6 20.7-30.9 37-61.5 48.2-91 13.5-35.3 20.3-70 20.3-103.3.1-35.3-7-69.6-20.9-101.9zM512 814.8S156 586.7 156 385.5C156 283.6 240.3 201 344.3 201c73.1 0 136.5 40.8 167.7 100.4C543.2 241.8 606.6 201 679.7 201c104 0 188.3 82.6 188.3 184.5 0 201.2-356 429.3-356 429.3z"
              />
            </svg>
          </span>
        </span>
      </li>
      <li
        style="width:33.333333333333336%"
      >
        <span>
          <span
            aria-label="share-alt"
            class="gicon gicon-share-alt"
            role="img"
            style="color:#4ecdc4"
          >
            <svg
              aria-hidden="true"
              data-icon="share-alt"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M752 664c-28.5 0-54.8 10-75.4 26.7L469.4 540.8a160.68 160.68 0 000-57.6l207.2-149.9C697.2 350 723.5 360 752 360c66.2 0 120-53.8 120-120s-53.8-120-120-120-120 53.8-120 120c0 11.6 1.6 22.7 4.7 33.3L439.9 415.8C410.7 377.1 364.3 352 312 352c-88.4 0-160 71.6-160 160s71.6 160 160 160c52.3 0 98.7-25.1 127.9-63.8l196.8 142.5c-3.1 10.6-4.7 21.8-4.7 33.3 0 66.2 53.8 120 120 120s120-53.8 120-120-53.8-120-120-120zm0-476c28.7 0 52 23.3 52 52s-23.3 52-52 52-52-23.3-52-52 23.3-52 52-52zM312 600c-48.5 0-88-39.5-88-88s39.5-88 88-88 88 39.5 88 88-39.5 88-88 88zm440 236c-28.7 0-52-23.3-52-52s23.3-52 52-52 52 23.3 52 52-23.3 52-52 52z"
              />
            </svg>
          </span>
        </span>
      </li>
      <li
        style="width:33.333333333333336%"
      >
        <span>
          <span
            aria-label="edit"
            class="gicon gicon-edit"
            role="img"
            style="color:#45b7d1"
          >
            <svg
              aria-hidden="true"
              data-icon="edit"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
              />
            </svg>
          </span>
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`renders components/card/demo/tabs.tsx correctly 1`] = `
Array [
  <div
    class="g-card g-card-bordered g-card-contain-tabs css-var-test-id"
    style="width:100%"
  >
    <div
      class="g-card-head"
    >
      <div
        class="g-card-head-wrapper"
      >
        <div
          class="g-card-head-title"
        >
          Card title
        </div>
        <div
          class="g-card-extra"
        >
          <a
            href="#"
          >
            More
          </a>
        </div>
      </div>
      <div
        class="g-tabs g-tabs-top g-tabs-large g-card-head-tabs css-var-test-id g-tabs-css-var"
      >
        <div
          aria-orientation="horizontal"
          class="g-tabs-nav"
          role="tablist"
        >
          <div
            class="g-tabs-nav-wrap"
          >
            <div
              class="g-tabs-nav-list"
              style="transform:translate(0px, 0px)"
            >
              <div
                class="g-tabs-tab g-tabs-tab-active"
                data-node-key="tab1"
              >
                <div
                  aria-selected="true"
                  class="g-tabs-tab-btn"
                  role="tab"
                  tabindex="0"
                >
                  tab1
                </div>
              </div>
              <div
                class="g-tabs-tab"
                data-node-key="tab2"
              >
                <div
                  aria-selected="false"
                  class="g-tabs-tab-btn"
                  role="tab"
                  tabindex="-1"
                >
                  tab2
                </div>
              </div>
              <div
                class="g-tabs-ink-bar g-tabs-ink-bar-animated"
              />
            </div>
          </div>
          <div
            class="g-tabs-nav-operations g-tabs-nav-operations-hidden"
          >
            <button
              aria-controls="null-more-popup"
              aria-expanded="false"
              aria-haspopup="listbox"
              class="g-tabs-nav-more"
              id="null-more"
              style="visibility:hidden;order:1"
              type="button"
            >
              <span
                aria-label="ellipsis"
                class="gicon gicon-ellipsis"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="ellipsis"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <div
          class="g-tabs-content-holder"
        >
          <div
            class="g-tabs-content g-tabs-content-top"
          >
            <div
              aria-hidden="false"
              class="g-tabs-tabpane g-tabs-tabpane-active"
              role="tabpanel"
              tabindex="-1"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="g-card-body"
    >
      <p>
        content1
      </p>
    </div>
  </div>,
  <br />,
  <br />,
  <div
    class="g-card g-card-bordered g-card-contain-tabs css-var-test-id"
    style="width:100%"
  >
    <div
      class="g-card-head"
    >
      <div
        class="g-card-head-wrapper"
      />
      <div
        class="g-tabs g-tabs-top g-card-head-tabs css-var-test-id g-tabs-css-var"
      >
        <div
          aria-orientation="horizontal"
          class="g-tabs-nav"
          role="tablist"
        >
          <div
            class="g-tabs-nav-wrap"
          >
            <div
              class="g-tabs-nav-list"
              style="transform:translate(0px, 0px)"
            >
              <div
                class="g-tabs-tab"
                data-node-key="article"
              >
                <div
                  aria-selected="false"
                  class="g-tabs-tab-btn"
                  role="tab"
                  tabindex="-1"
                >
                  article
                </div>
              </div>
              <div
                class="g-tabs-tab g-tabs-tab-active"
                data-node-key="app"
              >
                <div
                  aria-selected="true"
                  class="g-tabs-tab-btn"
                  role="tab"
                  tabindex="0"
                >
                  app
                </div>
              </div>
              <div
                class="g-tabs-tab"
                data-node-key="project"
              >
                <div
                  aria-selected="false"
                  class="g-tabs-tab-btn"
                  role="tab"
                  tabindex="-1"
                >
                  project
                </div>
              </div>
              <div
                class="g-tabs-ink-bar g-tabs-ink-bar-animated"
              />
            </div>
          </div>
          <div
            class="g-tabs-nav-operations g-tabs-nav-operations-hidden"
          >
            <button
              aria-controls="null-more-popup"
              aria-expanded="false"
              aria-haspopup="listbox"
              class="g-tabs-nav-more"
              id="null-more"
              style="visibility:hidden;order:1"
              type="button"
            >
              <span
                aria-label="ellipsis"
                class="gicon gicon-ellipsis"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="ellipsis"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
                  />
                </svg>
              </span>
            </button>
          </div>
          <div
            class="g-tabs-extra-content"
          >
            <a
              href="#"
            >
              More
            </a>
          </div>
        </div>
        <div
          class="g-tabs-content-holder"
        >
          <div
            class="g-tabs-content g-tabs-content-top"
          >
            <div
              aria-hidden="false"
              class="g-tabs-tabpane g-tabs-tabpane-active"
              role="tabpanel"
              tabindex="-1"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="g-card-body"
    >
      <p>
        app content
      </p>
    </div>
  </div>,
]
`;
